--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
   display: block;
   border-radius: 50%;
   margin: 0 auto;
-  background: url('./img/logo.svg') no-repeat 50% 50%;
+  background: url('../../assets/logo.svg') no-repeat 50% 50%;
   filter: drop-shadow(3px 3px 3px #333);
   cursor: pointer;
   transition: all 200ms ease;
