--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,7 @@
 .header {
   padding: 20px 0;
+  display: flex;
+  justify-content: center;
 }
 
 .logo {
@@ -7,7 +9,6 @@
   height: 65px;
   display: block;
   border-radius: 50%;
-  margin: 0 auto;
   background: url('../../assets/logo.svg') no-repeat 50% 50%;
   filter: drop-shadow(3px 3px 3px #333);
   cursor: pointer;
