--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -3,5 +3,6 @@ body {
   background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
   font-family: 'Open Sans', sans-serif;
   font-size: 1.2rem;
+  color: #333;
 }
 
