--- a/src/components/ActiveBoard/ActiveBoard.css
+++ b/src/components/ActiveBoard/ActiveBoard.css
@@ -6,6 +6,7 @@
   display: inline-block;
   padding: 20px 60px;
   margin: 20px 0;
+  text-align: center;
   color: white;
   font-weight: bold;
   font-size: 1.8rem;
